# Irrigation_need

./: .gitignore  README.md  program.md  pyproject.toml
scripts/: monitor_and_bank.py  run_bagged_followup.sh  run_cached_meta_experiments.sh  run_experiment.py  run_feature_engineering_experiments.sh  run_feature_selection_model_experiments.sh  run_full_reset_sweep.sh  run_more_experiments.sh  run_neural_followups.sh  run_notebook_feature_experiments.sh  run_requested_methods.sh  run_target_encoding_experiments.sh  solution.py  update_score_chart.py
