[project]
name = "irrigation-need"
version = "0.1.0"
description = "Baseline experiments for Predicting Irrigation Need."
requires-python = ">=3.13,<3.14"
dependencies = [
    "catboost==1.2.10",
    "lightgbm==4.6.0",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pytorch-tabnet>=4.1.0",
    "scikit-learn==1.8.0",
    "torch>=2.11.0",
    "xgboost==3.2.0",
]

[tool.uv]
package = false
